--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "blog";
-    Page.Title = "Blog General - Brokolee Software";
+    Page.Title = "Blog general - Brokolee Software";
 }
 
 <style>
@@ -40,13 +40,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Blog General</h4>
+                            <h4 class="page-title">Blog general</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Blog General</li>
+                            <li class="breadcrumb-item active">Blog general</li>
                         </ul>
                     </div>
                 </div>
