--- a/WebApplication1/Areas/coadmin/Views/contacto/informacion.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/informacion.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "informacion";
-    Page.Title = "Información de Contacto - Brokolee Software";
+    Page.Title = "Información de contacto - Brokolee Software";
 }
 
 
@@ -20,7 +20,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Información de Contacto</li>
+                            <li class="breadcrumb-item active">Información de contacto</li>
                         </ul>
                     </div>
                 </div>
@@ -46,13 +46,13 @@
                        
                         <div class="card-body">
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía Administración</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía administración</label>
                                 <div class="col-sm-9">
                                    
                                         <input class="form-control" type="email" value=""
                                                required name="company_admin"
                                                placeholder="Compañía Administración" id="example-email-input"
-                                               data-toggle="tooltip" title="Nombre de Compañía de Administración" />
+                                               data-toggle="tooltip" title="Nombre de Compañía de administración" />
                                     
 
                                     <small class="form-text text-muted">Nombre de Compañía de Administración</small>
