--- a/WebApplication1/Areas/coadmin/Views/cuotas/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/listado.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Cuotas - Brokolee Software";
+    Page.Title = "Listado de cuotas - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -18,7 +18,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Cuotas</li>
+                            <li class="breadcrumb-item active">Listado de cuotas</li>
                         </ul>
                     </div>
                 </div>
