--- a/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
@@ -193,7 +193,7 @@
                                             }
                                             else
                                             {
-                                                <input type="checkbox" name="siono" value="boxyes"   data-toggle="tooltip" title="Si"
+                                                <input type="checkbox" name="siono" value="boxyes" data-toggle="tooltip" title="Si"
                                                        class="custom-control-input" id="customCheck6" data-parsley-multiple="groups" data-parsley-mincheck="2">
                                             }
                                             <label class="custom-control-label" for="customCheck6"> Si</label>
@@ -359,6 +359,7 @@
                             <!-- End View -->
 
                             <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
