--- a/WebApplication1/Areas/webmaster/Views/administradores/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Administradores - Brokolee Software";
+    Page.Title = "Listado de administradores - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Administradores</li>
+                            <li class="breadcrumb-item active">Listado de administradores</li>
                         </ul>
                     </div>
                 </div>
@@ -67,8 +67,8 @@
                                 <thead>
                                     <tr>
                                         <th class="f-b status">Nombre</th>
-                                        <th class="f-b status">Apellido Paterno</th>
-                                        <th class="f-b status">Apellido Materno</th>
+                                        <th class="f-b status">Apellido paterno</th>
+                                        <th class="f-b status">Apellido materno</th>
                                         <th class="f-b status">Email</th>
                                         <th class="f-b">Estado</th>
                                         <th class="f-b">Comunidad(es)</th>
