--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/verblog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/verblog.cshtml
@@ -66,7 +66,7 @@
                         <div class="form-divider"></div>
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Blog Comentarios</h5>
+                                <h5 class="d-inline-block">Comentarios del blog</h5>
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("agregarcomentario", "comunicaciones", new { blogID = Model.blogID, area = "webmaster" })">
