--- a/WebApplication1/Areas/webmaster/Views/comunidades/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Comunidades - Brokolee Software";
+    Page.Title = "Listado de comunidades - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Comunidades</li>
+                            <li class="breadcrumb-item active">Listado de comunidades</li>
                         </ul>
                     </div>
                 </div>
