--- a/WebApplication1/Areas/webmaster/Views/comunidades/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/ver.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ver";
-    Page.Title = "Comunidad 1 - Brokolee Software";
+    Page.Title = "Ver comunidad - Brokolee Software";
 }
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -21,7 +21,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Comunidad</li>
+                            <li class="breadcrumb-item active">Ver comunidad</li>
                         </ul>
                     </div>
                 </div>
