--- a/WebApplication1/Areas/webmaster/Views/suplidores/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/ver.cshtml
@@ -44,7 +44,7 @@
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("editar", "suplidores", new { area = "webmaster", editID=Model.viewSupplier.id } )" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left">Editar</button></a>
-                                <a href="@Url.Action("agregar",  "suplidores", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
+                                @*<a href="@Url.Action("agregar",  "suplidores", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
