--- a/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Titulos - Brokolee Software";
+    Page.Title = "Listado de titulos - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
