--- a/WebApplication1/Areas/webmaster/Views/titulares/verVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/verVehiculo.cshtml
@@ -9,7 +9,7 @@
 
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    Page.Title = "Ver vehículo - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -40,7 +40,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver Vehículo</li>
+                            <li class="breadcrumb-item active">Ver vehículo</li>
                         </ul>
                     </div>
                 </div>
