--- a/WebApplication1/Areas/webmaster/Views/webmaster/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/listado.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Webmasters - Brokolee Software";
+    Page.Title = "Listado de webmasters - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -18,7 +18,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Webmasters</li>
+                            <li class="breadcrumb-item active">Listado de webmasters</li>
                         </ul>
                     </div>
                 </div>
