--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarblog.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "blog";
-    Page.Title = "Blog Agregar - Brokolee Software";
+    Page.Title = "Agregar entrada - Brokolee Software";
 }
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -25,7 +25,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Entrada</li>
+                            <li class="breadcrumb-item active">Agregar entrada</li>
                         </ul>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nuevo Blog</h5>
+                            <h5 class="d-inline-block">Nueva entrada</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input-1" class="col-sm-3 col-form-label">Título</label>
