--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
@@ -51,7 +51,7 @@
                         @Html.AntiForgeryToken()
                         <input name="blogID" value="@Model.blogID" type="hidden" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nuevo Comentario</h5>
+                            <h5 class="d-inline-block">Nuevo comentario</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Comentario</label>
