--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/verblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/verblog.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "verblog";
-    Page.Title = "Ver blog - Brokolee Software";
+    Page.Title = "Ver entrada - Brokolee Software";
 }
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
@@ -22,7 +22,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver blog</li>
+                            <li class="breadcrumb-item active">Ver entrada</li>
                         </ul>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                         <div class="form-divider"></div>
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Blog Comentarios</h5>
+                                <h5 class="d-inline-block">Comentarios</h5>
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("agregarcomentario", "comunicaciones", new { blogID = Model.blogID, area = "coadmin" })">
