--- a/WebApplication1/Areas/coadmin/Views/contacto/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/editar.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Contacto - Brokolee Software";
+    Page.Title = "Editar contacto - Brokolee Software";
 }
 
 
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Información de Contacto</li>
+                            <li class="breadcrumb-item active">Editar contacto</li>
                         </ul>
                     </div>
                 </div>
@@ -52,23 +52,23 @@
                         }
                         <div class="card-body">
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía Administración</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía de administración</label>
                                 <div class="col-sm-9">
                                     @if (Model.editContactInfo == null)
                                     {
                                         <input class="form-control" type="email" value="" required name="company_admin"
-                                               placeholder="Compañía Administración" id="example-email-input"
-                                               data-toggle="tooltip" title="Nombre de Compañía de Administración" />
+                                               placeholder="Compañía de administración" id="example-email-input"
+                                               data-toggle="tooltip" title="Nombre de compañía de administración" />
                                     }
                                     else
                                     {
                                         <input class="form-control" type="email" value="@Model.editContactInfo.company_admin"
                                                required name="company_admin"
-                                               placeholder="Compañía Administración" id="example-email-input"
-                                               data-toggle="tooltip" title="Nombre de Compañía de Administración" />
+                                               placeholder="Compañía de administración" id="example-email-input"
+                                               data-toggle="tooltip" title="Nombre de compañía de administración" />
                                     }
 
-                                    <small class="form-text text-muted">Nombre de Compañía de Administración</small>
+                                    <small class="form-text text-muted">Nombre de compañía de administración</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -79,19 +79,19 @@
                                     {
                                         <input class="form-control" type="text" value="" name="coordinator"
                                                placeholder="Administrador o Coordinador" id="example-name1-input"
-                                               data-toggle="tooltip" title="Administrador o Coordinador de Administración">
+                                               data-toggle="tooltip" title="Administrador o Coordinador de administración">
                                     }
                                     else
                                     {
                                         <input class="form-control" type="text" value="@Model.editContactInfo.coordinator" name="coordinator"
                                                placeholder="Administrador o Coordinador" id="example-name1-input"
-                                               data-toggle="tooltip" title="Administrador o Coordinador de Administración" />
+                                               data-toggle="tooltip" title="Administrador o Coordinador de administración" />
                                     }
-                                    <small class="form-text text-muted">Administrador o Coordinador de Administración</small>
+                                    <small class="form-text text-muted">Administrador o Coordinador de administración</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <h6 class="mt-0 header-title">Junta de Directores</h6>
+                            <h6 class="mt-0 header-title">Junta de directores</h6>
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Presidente</label>
                                 <div class="col-sm-9">
@@ -138,19 +138,19 @@
                                     @if (Model.editContactInfo == null)
                                     {
                                         <input class="form-control" type="text" value="" name="treasurer"
-                                               placeholder="Nombre del Tesorero"
-                                               data-toggle="tooltip" title="Nombre completo del Tesorero"
+                                               placeholder="Nombre del tesorero"
+                                               data-toggle="tooltip" title="Nombre completo del tesorero"
                                                id="example-lastname1-input" />
                                     }
                                     else
                                     {
                                         <input class="form-control" type="text" value="@Model.editContactInfo.treasurer" name="treasurer"
-                                               placeholder="Nombre del Tesorero"
-                                               data-toggle="tooltip" title="Nombre completo del Tesorero"
+                                               placeholder="Nombre del tesorero"
+                                               data-toggle="tooltip" title="Nombre completo del tesorero"
                                                id="example-lastname1-input">
                                     }
 
-                                    <small class="form-text text-muted">Nombre completo del Tesorero</small>
+                                    <small class="form-text text-muted">Nombre completo del tesorero</small>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -159,17 +159,17 @@
                                     @if (Model.editContactInfo == null)
                                     {
                                         <input class="form-control" type="text" value="" name="secretary"
-                                               placeholder="Nombre del Secretario" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del Secretario" />
+                                               placeholder="Nombre del secretario" id="example-lastname1-input"
+                                               data-toggle="tooltip" title="Nombre completo del secretario" />
                                     }
                                     else
                                     {
                                         <input class="form-control" type="text" value="@Model.editContactInfo.secretary" name="secretary"
-                                               placeholder="Nombre del Secretario" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del Secretario" />
+                                               placeholder="Nombre del secretario" id="example-lastname1-input"
+                                               data-toggle="tooltip" title="Nombre completo del secretario" />
                                     }
 
-                                    <small class="form-text text-muted">Nombre completo del Secretario</small>
+                                    <small class="form-text text-muted">Nombre completo del secretario</small>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -229,18 +229,18 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección Física</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección física</label>
                                 <div class="col-sm-9">
                                     @if (Model.editContactInfo == null)
                                     {
                                         <input class="form-control" type="text" value="" name="phy_address"
-                                               placeholder="Dirección Física" id="example-lastname1-input"
+                                               placeholder="Dirección física" id="example-lastname1-input"
                                                data-toggle="tooltip" title="Dirección física" />
                                     }
                                     else
                                     {
                                         <input class="form-control" type="text" value="@Model.editContactInfo.phy_address"
-                                               placeholder="Dirección Física" name="phy_address"
+                                               placeholder="Dirección física" name="phy_address"
                                                data-toggle="tooltip" title="Dirección física"
                                                id="example-lastname1-input">
                                     }
@@ -250,18 +250,18 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección Postal</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección postal</label>
                                 <div class="col-sm-9">
                                     @if (Model.editContactInfo == null)
                                     {
                                         <input class="form-control" type="text" value="" name="postal_address" required
-                                               placeholder="Dirección Postal" id="example-lastname1-input"
+                                               placeholder="Dirección postal" id="example-lastname1-input"
                                                data-toggle="tooltip" title="Dirección postal" />
                                     }
                                     else
                                     {
                                         <input class="form-control" type="text" value="@Model.editContactInfo.postal_address" name="postal_address" required
-                                               placeholder="Dirección Postal" id="example-lastname1-input"
+                                               placeholder="Dirección postal" id="example-lastname1-input"
                                                data-toggle="tooltip" title="Dirección postal" />
                                     }
 
@@ -331,7 +331,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            @*<a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>*@
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
