--- a/WebApplication1/Areas/coadmin/Views/cuotas/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Cuota - Brokolee Software";
+    Page.Title = "Agregar cuota - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Cuota</li>
+                            <li class="breadcrumb-item active">Agregar cuota</li>
                         </ul>
                     </div>
                 </div>
@@ -47,21 +47,21 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nueva Cuota</h5>
+                            <h5 class="d-inline-block">Nueva cuota</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la Cuota</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la cuota</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.feeName" name="fee_name" required
+                                    <input class="form-control" type="text" value="" name="fee_name" required
                                            placeholder="Cuota..." id="example-email-input">
-                                    <small class="form-text text-muted">Nombre de la Cuota</small>
+                                    <small class="form-text text-muted">Nombre de la cuota</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Costo</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.cost" name="cost" required
+                                    <input class="form-control" type="text" value="" name="cost" required
                                            placeholder="0.00" id="example-name1-input">
                                     <small class="form-text text-muted">Costo</small>
                                 </div>
@@ -70,7 +70,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Cargo de impuestos</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.taxCharge" name="taxCharge" required
+                                    <input class="form-control" type="text" value="" name="taxCharge" required
                                            placeholder="0.00" id="example-name1-input">
                                     <small class="form-text text-muted">Cargo de impuestos</small>
                                 </div>
@@ -79,7 +79,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Pena</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.penalty" name="penalty" required
+                                    <input class="form-control" type="text" value="" name="penalty" required
                                            placeholder="0.00" id="example-name1-input">
                                     <small class="form-text text-muted">Pena</small>
                                 </div>
@@ -106,21 +106,21 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="@Url.Action("agregarcuenta", "cuotas", new {  area = "coadmin" })">
-                                        <button type="button" class="btn btn-primary waves-effect waves-light">Guardar</button>
+                                        <button type="button" class="btn btn-primary waves-effect waves-light">Agregar cuenta</button>
                                     </a>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Merchant Account</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Cuenta comercial</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.merchantAccount" name="merchant_account" required
+                                    <input class="form-control" type="text" value="" name="merchant_account" required
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-lastname1-input">
-                                    <small class="form-text text-muted">Merchant Account</small>
+                                    <small class="form-text text-muted">Cuenta comercial</small>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Cuota</button>
-                            <a href="javascript:history.back()"> <button type="button" class="btn btn-danger waves-effect waves-light"> <i class="mdi mdi-keyboard-return"></i>Cancelar</button>
+                            <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
+                            <a href="javascript:history.back()"> <button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button>
 </div>
                     }
                 </div>
