--- a/WebApplication1/Areas/coadmin/Views/cuotas/agregarcuenta.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/agregarcuenta.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregarcuenta";
-    Page.Title = "Agregar Cuenta de Banco - Brokolee Software";
+    Page.Title = "Agregar cuenta - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="index.html" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Cuenta de Banco</li>
+                            <li class="breadcrumb-item active">Agregar cuenta</li>
                         </ul>
                     </div>
                 </div>
@@ -50,42 +50,42 @@
                             <h5 class="d-inline-block m-b-20">Información de la cuenta de Banco</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la Cuenta</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la cuenta</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="account_name"
-                                           placeholder="Cuenta Personal" id="example-email-input">
-                                    <small class="form-text text-muted">Nombre de la Cuenta</small>
+                                           placeholder="Cuenta personal" id="example-email-input">
+                                    <small class="form-text text-muted">Nombre de la cuenta</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-name1-input" class="col-sm-3 col-form-label">Número de Cuenta</label>
+                                <label for="example-name1-input" class="col-sm-3 col-form-label">Número de cuenta</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="account_number"
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-name1-input">
-                                    <small class="form-text text-muted">Número de Cuenta</small>
+                                    <small class="form-text text-muted">Número de cuenta</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-name1-input" class="col-sm-3 col-form-label">Nombre del Banco</label>
+                                <label for="example-name1-input" class="col-sm-3 col-form-label">Nombre del banco</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="bank_name"
-                                           placeholder="Nombre del Banco" id="example-name1-input">
-                                    <small class="form-text text-muted">Nombre del Banco</small>
+                                           placeholder="Nombre del banco" id="example-name1-input">
+                                    <small class="form-text text-muted">Nombre del banco</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Número de Ruta</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Número de ruta</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="route_number"
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-lastname1-input">
-                                    <small class="form-text text-muted">Número de Ruta</small>
+                                    <small class="form-text text-muted">Número de ruta</small>
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
-                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i>Cancelar</button>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button>
 
                         </div>
                     }
