--- a/WebApplication1/Areas/coadmin/Views/suplidores/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Suplidor - Brokolee Software";
+    Page.Title = "Agregar suplidor - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -43,7 +43,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Suplidor</li>
+                            <li class="breadcrumb-item active">Agregar suplidor</li>
                         </ul>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nuevo Suplidor</h5>
+                            <h5 class="d-inline-block">Nuevo suplidor</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label id="img-fluid" for="example-name2-input" class="col-sm-3 col-form-label"> </label>
@@ -84,7 +84,7 @@
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04" name="logo_file"
                                                    data-toggle="tooltip" title="Subir logo en formato jpg o png">
-                                            <label id="archeditar2" class="custom-file-label" for="inputGroupFile04">Seleccionar archivo-g</label>
+                                            <label id="archeditar2" class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
                                         </div>
                                         <div class="col-sm-3">
                                             <small class="form-text text-muted">Subir logo en formato jpg o png</small>
@@ -95,7 +95,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía Suplidor</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía suplidor</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" data-toggle="tooltip" title="Nombre de la compañía del suplidor"
                                            placeholder="Compañía Suplidor" id="example-email-input" name="company" required>
@@ -181,7 +181,7 @@
                                 </div>
                             </div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="javascript:history.back()"> <button type="button" class="btn btn-danger waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i>Cancelar</button></a>
+                            <a href="javascript:history.back()"> <button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
 </div>
                     }
                 </div>
