--- a/WebApplication1/Areas/coadmin/Views/suplidores/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Suplidor - Brokolee Software";
+    Page.Title = "Editar suplidor - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -44,7 +44,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area="coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Suplidor</li>
+                            <li class="breadcrumb-item active">Editar suplidor</li>
                         </ul>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía Suplidor</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía suplidor</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="@Model.editSupplier.company"
                                            placeholder="Compañía Suplidor" id="example-email-input" name="company"
