--- a/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
@@ -44,7 +44,7 @@
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("editar", "suplidores", new { area = "coadmin", editID=Model.viewSupplier.id })" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Editar</button></a>
-                                <a href="@Url.Action("agregar", "suplidores", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Agregar nuevo</button></a>
+                                @*<a href="@Url.Action("agregar", "suplidores", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Agregar nuevo</button></a>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
