--- a/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregarVehiculo.cshtml
@@ -103,7 +103,7 @@
                         <h5 class="d-inline-block">Vehículos autorizados</h5>
                         <input type="hidden" value="@Model.titulo.Id" name="IdTitulo" />
 
-                      
+
                         <div class="form-divider"></div>
                         <div class="form-group row">
                             <label for="example-brand-input" class="col-sm-3 col-form-label">Marca</label>
@@ -162,6 +162,7 @@
                         <!-- View -->
                         <!-- End View -->
                         <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
+                        <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                     </div>
                     }
                 </div>
