--- a/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
@@ -221,6 +221,7 @@
 
 
                             <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
