--- a/WebApplication1/Areas/coadmin/Views/titulares/editarVehiculo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editarVehiculo.cshtml
@@ -151,6 +151,7 @@
                                 </div>
                             </div>
                             <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
