--- a/WebApplication1/Areas/webmaster/Views/administradores/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/ver.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ver";
-    Page.Title = "El nombre del Administrador - Brokolee Software";
+    Page.Title = "Ver administrador - Brokolee Software";
 }
 
 <style media="screen">
@@ -36,7 +36,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver Administrador</li>
+                            <li class="breadcrumb-item active">Ver administrador</li>
                         </ul>
                     </div>
                 </div>
@@ -94,20 +94,20 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido Paterno</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="@Model.editAdmin.last_name1"
-                                           placeholder="Apellido Paterno" id="example-email-input" name="last_name1" required
+                                           placeholder="Apellido paterno" id="example-email-input" name="last_name1" required
                                            data-toggle="tooltip" readonly />
                                     @*<small class="form-text text-muted">Apellido Paterno del Administrador</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido Materno</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido materno</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="@Model.editAdmin.mother_last_name1"
-                                           placeholder="Apellido Materno" id="example-email-input" name="mother_last_name1"
+                                           placeholder="Apellido materno" id="example-email-input" name="mother_last_name1"
                                            data-toggle="tooltip" readonly />
                                     @* <small class="form-text text-muted">Apellido Materno del Administrador</small>*@
                                 </div>
