--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "blog";
-    Page.Title = "Blog General - Brokolee Software";
+    Page.Title = "Blog general - Brokolee Software";
 }
 
 <style>
@@ -46,7 +46,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Blog General</li>
+                            <li class="breadcrumb-item active">Blog general</li>
                         </ul>
                     </div>
                 </div>
