--- a/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Comunidad - Brokolee Software";
+    Page.Title = "Editar comunidad - Brokolee Software";
 }
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -21,7 +21,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" } )" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Comunidad</li>
+                            <li class="breadcrumb-item active">Editar comunidad</li>
                         </ul>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                         @Html.AntiForgeryToken()
                         <input name="communityID" value="@Model.editCommunity.id" type="hidden" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nueva Comunidad</h5>
+                            <h5 class="d-inline-block">Editar comunidad</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
@@ -66,6 +66,7 @@
                             <div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador</label>
                                 <div class="col-sm-9">
+
                                     <select class="form-control" id="AdminSelect" multiple="multiple" name="adminlist"
                                             data-toggle="tooltip" title="Email del Administrador">
 
@@ -120,7 +121,7 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" name="apartment" placeholder="Dirección"
-                                           data-toggle="tooltip" title="Dirección" value="@Model.editCommunity.apart"
+                                           data-toggle="tooltip" value="@Model.editCommunity.apart"
                                            required />
                                     @*<small class="form-text text-muted">Dirección</small>*@
                                 </div>
