--- a/WebApplication1/Areas/webmaster/Views/pagos/recibidos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/pagos/recibidos.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "recibidos";
+    Page.Title = "Pagos recibidos - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -18,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Pagos Recibidos</li>
+                            <li class="breadcrumb-item active">Pagos recibidos</li>
                         </ul>
                     </div>
                 </div>
@@ -64,8 +65,8 @@
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th class="f-b">Nombre del Plan</th>
-                                        <th class="f-b">Nombre del Administrador</th>
+                                        <th class="f-b">Nombre del plan</th>
+                                        <th class="f-b">Nombre del administrador</th>
                                         <th class="f-b">Email</th>
                                         <th class="f-b">Pago</th>
                                     </tr>
