--- a/WebApplication1/Areas/webmaster/Views/paquetes/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Paquete - Brokolee Software";
+    Page.Title = "Agregar paquete - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Paquete</li>
+                            <li class="breadcrumb-item active">Agregar paquete</li>
                         </ul>
                     </div>
                 </div>
@@ -49,15 +49,15 @@
                     {
                         @Html.AntiForgeryToken()
                     <div class="card-body">
-                        <h5 class="d-inline-block">Nuevo Paquete</h5>
+                        <h5 class="d-inline-block">Nuevo paquete</h5>
                         <div class="form-divider"></div>
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="" name="first_name" required
                                        placeholder="Nombre" id="example-email-input"
-                                       data-toggle="tooltip" title="Nombre del Paquete" />
-                                <small class="form-text text-muted">Nombre del Paquete</small>
+                                       data-toggle="tooltip" title="Nombre del paquete" />
+                                <small class="form-text text-muted">Nombre del paquete</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -114,7 +114,7 @@
                             </div>
                         </div>*@
                         @*<div class="form-divider"></div>*@
-                        <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar Paquete</button></a>
+                        <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                         <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                     </div>
                     }
