--- a/WebApplication1/Areas/webmaster/Views/paquetes/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Paquetes - Brokolee Software";
+    Page.Title = "Listado de paquetes - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Paquetes</li>
+                            <li class="breadcrumb-item active">Listado de paquetes</li>
                         </ul>
                     </div>
                 </div>
@@ -66,9 +66,9 @@
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th class="f-b">Nombre del Paquete</th>
+                                        <th class="f-b">Nombre del paquete</th>
                                         <th class="f-b">Tarifa</th>
-                                        <th class="f-b">Descripción del Paquete</th>
+                                        <th class="f-b">Descripción del paquete</th>
                                         <th class="f-b">Enlace</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
