--- a/WebApplication1/Areas/webmaster/Views/suplidores/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Suplidor - Brokolee Software";
+    Page.Title = "Agregar suplidor - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Suplidor</li>
+                            <li class="breadcrumb-item active">Agregar suplidor</li>
                         </ul>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nuevo Suplidor</h5>
+                            <h5 class="d-inline-block">Nuevo suplidor</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-name2-input" class="col-sm-3 col-form-label">Logo</label>
@@ -72,11 +72,11 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía Suplidor</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Compañía suplidor</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="company" required
                                            data-toggle="tooltip" title="Nombre de la compañía del suplidor"
-                                           placeholder="Compañía Suplidor" id="example-email-input">
+                                           placeholder="Compañía suplidor" id="example-email-input">
                                     <small class="form-text text-muted">Nombre de la compañía del suplidor</small>
                                 </div>
                             </div>
@@ -165,7 +165,7 @@
                                     <small class="form-text text-muted">Por ejemplo: wwww.suplidores.com</small>
                                 </div>
                             </div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Suplidor</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
