--- a/WebApplication1/Areas/webmaster/Views/suplidores/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Suplidores - Brokolee Software";
+    Page.Title = "Listado de suplidores - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Suplidores</li>
+                            <li class="breadcrumb-item active">Listado de suplidores</li>
                         </ul>
                     </div>
                 </div>
@@ -45,11 +45,11 @@
                                     <input type="text" id="example-input1-group2" name="searchStr" value="@Model.searchStr"
                                            class="form-control" placeholder="Escribe palabra clave para la búsqueda">
                                     <span class="input-group-append">
-                                        <button type="submit" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar </button>
+                                        <button type="submit" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar por nombre de contacto </button>
                                     </span>
                                 </div>
                                 <div class="input-group col-md-6">
-                                    <label class="col-sm-6 col-md-4 col-form-label">Buscar por Categoría</label>
+                                    <label class="col-sm-6 col-md-4 col-form-label">Buscar por categoría</label>
                                     <div class="col-sm-6 col-md-8">
                                         <select class="form-control" id="id-search-category"
                                                 name="searchCategoryId"
@@ -152,12 +152,15 @@
                                                 }
                                             </td>
                                             <td class="text-center">
-                                                <button type="button" 
-                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1">Activar</button>
+                                                <button type="button"
+                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1">
+                                                    Activar
+                                                </button>
                                                 <button type="button" class="btn btn-dark waves-effect waves-light btn-sm mr-1 mb-1">Desactivar</button>
                                                 <a href="@Url.Action("ver", "suplidores", new { area = "webmaster", viewID = item.id })">
-                                                    <button type="button" class="btn btn-info waves-effect waves-light btn-sm mb-1">Ver comentarios
-                                                        </button>
+                                                    <button type="button" class="btn btn-info waves-effect waves-light btn-sm mb-1">
+                                                        Ver comentarios
+                                                    </button>
                                                 </a>
                                             </td>
                                             <td class="text-center">
@@ -165,17 +168,23 @@
                                                     <button type="button"
                                                             class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Ver">
-                                                    <i class="mdi mdi-eye"></i></button></a>
+                                                        <i class="mdi mdi-eye"></i>
+                                                    </button>
+                                                </a>
                                                 <a href="@Url.Action("editar", "suplidores", new { area = "webmaster", editID = item.id })">
-                                                    <button type="button" 
-                                                            class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" 
+                                                    <button type="button"
+                                                            class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Editar">
-                                                    <i class="mdi mdi-lead-pencil"></i></button></a>
+                                                        <i class="mdi mdi-lead-pencil"></i>
+                                                    </button>
+                                                </a>
                                                 <a href="#">
                                                     <button type="button" onclick="onDeleteSupplier(this)" data-id="@item.id"
-                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1" 
+                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Eliminar">
-                                                    <i class="mdi mdi-delete"></i></button></a>
+                                                        <i class="mdi mdi-delete"></i>
+                                                    </button>
+                                                </a>
                                             </td>
                                         </tr>
                                     }
