--- a/WebApplication1/Areas/webmaster/Views/titulares/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Titular - Brokolee Software";
+    Page.Title = "Agregar titular - Brokolee Software";
 }
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
@@ -58,7 +58,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Titular</li>
+                            <li class="breadcrumb-item active">Agregar titular</li>
                         </ul>
                     </div>
                 </div>
@@ -99,113 +99,114 @@
                         }))
                     {
                         @Html.AntiForgeryToken()
-                        <div class="card-body">
-                            <h5 class="d-inline-block">Información del Titular</h5>
+                    <div class="card-body">
+                        <h5 class="d-inline-block">Información del titular</h5>
 
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <div id="img-fluid" class="col-sm-3">
-                                </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <div id="img-fluid" class="col-sm-3">
+                            </div>
 
-                                <div class="col-sm-9">
-                                    <div class="input-group mt-2">
-                                        <div class="custom-file">
-                                            <input type="file" class="custom-file-input" id="inputGroupFile04"
-                                                   data-toggle="tooltip" title="Subir logo en formato jpg o png" name="user_logo" />
-                                            <label class="custom-file-label" for="inputGroupFile04">Selecciona Tu Imagen</label>
-                                        </div>
-                                        <div class="col-sm-3">
-                                            <small class="form-text text-muted">Subir logo en formato jpg o png</small>
-                                        </div>
-
+                            <div class="col-sm-9">
+                                <div class="input-group mt-2">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="inputGroupFile04"
+                                               data-toggle="tooltip" title="Subir logo en formato jpg o png" name="user_logo" />
+                                        <label class="custom-file-label" for="inputGroupFile04">Selecciona tu imagen</label>
                                     </div>
+                                    <div class="col-sm-3">
+                                        <small class="form-text text-muted">Subir logo en formato jpg o png</small>
+                                    </div>
+
                                 </div>
                             </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="email" value="" name="email" required
-                                           data-toggle="tooltip" title="Base utilizada para identificar las unidades suscritas de varias comunidades adscritas."
-                                           placeholder="Correo electrónico del titular" id="example-email-input">
-                                    <small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="password" value="" name="password"
-                                           data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema"
-                                           placeholder="Contraseña" id="example-password-input">
-                                    <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>                           
-                            <div class="form-divider"></div>
-                            <h6 class="mt-0 header-title">Nombre completo del titular</h6>
-                            <p>Nombre del titular según aparece en la escritura de compraventa.</p>
-                            <div class="form-group row">
-                                <label for="example-name22-input" class="col-sm-3 col-form-label">Nombre</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="first_name1"
-                                           data-toggle="tooltip" title="Nombre del titular"
-                                           placeholder="Nombre" id="example-name22-input" />
-                                    <small class="form-text text-muted">Nombre del titular</small>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="example-lastname2-input" class="col-sm-3 col-form-label">Apellido paterno</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="last_name1"
-                                           data-toggle="tooltip" title="Apellido paterno del titular"
-                                           placeholder="Apellido paterno" id="example-lastname22-input">
-                                    <small class="form-text text-muted">Apellido paterno del titular</small>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="example-lastname22m-input" class="col-sm-3 col-form-label">Apellido materno</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="mother_last_name1"
-                                           data-toggle="tooltip" title="Apellido materno del titular"
-                                           placeholder="Apellido materno" id="example-lastname22m-input">
-                                    <small class="form-text text-muted">Apellido materno del titular</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de teléfono</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="tel" value="" name="phone_number1"
-                                           data-toggle="tooltip" title="Número de teléfono del titular"
-                                           placeholder="# Teléfono" id="example-tel1-input">
-                                    <small class="form-text text-muted">Número de teléfono del titular</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-address11-input" class="col-sm-3 col-form-label">Dirección postal</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="postal_address"
-                                           data-toggle="tooltip" title="Dirección postal del titular"
-                                           placeholder="Dirección Postal" id="example-address11-input">
-                                    <small class="form-text text-muted">Dirección postal del titular</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-address2-inputt" class="col-sm-3 col-form-label">Dirección residencial</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="residential_address"
-                                           data-toggle="tooltip" title="Dirección residencial del titular"
-                                           placeholder="Dirección residencial" id="example-address2-inputt">
-                                    <small class="form-text text-muted">Dirección residencial del titular-G1</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>      
-                            <!-- End View -->
-                            <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
                         </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="email" value="" name="email" required
+                                       data-toggle="tooltip" title="Correo electrónico del titular"
+                                       placeholder="Correo electrónico" id="example-email-input">
+                                <small class="form-text text-muted">Correo electrónico del titular</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="password" value="" name="password"
+                                       data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema"
+                                       placeholder="Contraseña" id="example-password-input">
+                                <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-divider"></div>
+                        <h6 class="mt-0 header-title">Nombre completo del titular</h6>
+                        <p>Nombre del titular según aparece en la escritura de compraventa.</p>
+                        <div class="form-group row">
+                            <label for="example-name22-input" class="col-sm-3 col-form-label">Nombre</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" value="" name="first_name1"
+                                       data-toggle="tooltip" title="Nombre del titular"
+                                       placeholder="Nombre" id="example-name22-input" />
+                                <small class="form-text text-muted">Nombre del titular</small>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="example-lastname2-input" class="col-sm-3 col-form-label">Apellido paterno</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" value="" name="last_name1"
+                                       data-toggle="tooltip" title="Apellido paterno del titular"
+                                       placeholder="Apellido paterno" id="example-lastname22-input">
+                                <small class="form-text text-muted">Apellido paterno del titular</small>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="example-lastname22m-input" class="col-sm-3 col-form-label">Apellido materno</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" value="" name="mother_last_name1"
+                                       data-toggle="tooltip" title="Apellido materno del titular"
+                                       placeholder="Apellido materno" id="example-lastname22m-input">
+                                <small class="form-text text-muted">Apellido materno del titular</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-tel1-input" class="col-sm-3 col-form-label">Número de teléfono</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="tel" value="" name="phone_number1"
+                                       data-toggle="tooltip" title="Número de teléfono del titular"
+                                       placeholder="# Teléfono" id="example-tel1-input">
+                                <small class="form-text text-muted">Número de teléfono del titular</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-address11-input" class="col-sm-3 col-form-label">Dirección postal</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" value="" name="postal_address"
+                                       data-toggle="tooltip" title="Dirección postal del titular"
+                                       placeholder="Dirección Postal" id="example-address11-input">
+                                <small class="form-text text-muted">Dirección postal del titular</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-address2-inputt" class="col-sm-3 col-form-label">Dirección residencial</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" value="" name="residential_address"
+                                       data-toggle="tooltip" title="Dirección residencial del titular"
+                                       placeholder="Dirección residencial" id="example-address2-inputt">
+                                <small class="form-text text-muted">Dirección residencial del titular</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <!-- End View -->
+                        <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
+                        <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                    </div>
                     }
                 </div>
             </div>
