--- a/WebApplication1/Areas/webmaster/Views/titulares/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    Page.Title = "Editar titular - Brokolee Software";
 }
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -55,7 +55,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Titular</li>
+                            <li class="breadcrumb-item active">Editar titular</li>
                         </ul>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                         @Html.AntiForgeryToken()
                         <input type="hidden" value="@Model.editUser.id" name="editID" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Información del Titular</h5>
+                            <h5 class="d-inline-block">Información del titular</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <div id="img-fluid" class="col-sm-3">
@@ -129,8 +129,8 @@
                                 <div class="col-sm-9">
                                     <input class="form-control" type="email" name="email" required value="@Model.editUser.email"
                                            data-toggle="tooltip"
-                                           placeholder="Correo electrónico del titular" id="example-email-input">
-                                    <small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>
+                                           placeholder="Correo electrónico" id="example-email-input">
+                                    @*<small class="form-text text-muted">Correo electrónico del titular</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -222,6 +222,7 @@
 
 
                             <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
