--- a/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    Page.Title = "Editar título - Brokolee Software";
 }
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
@@ -50,13 +50,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Título de Propiedad</h4>
+                            <h4 class="page-title">Editar título de Propiedad</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Título de Propiedad</li>
+                            <li class="breadcrumb-item active">Editar título</li>
                         </ul>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         <input type="hidden" value="@Model.titulo.Id" name="IdTitulo" />
                         <input type="hidden" value="@Model.titulo.IdUser" name="IdUser" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Información del Titular</h5>
+                            <h5 class="d-inline-block">Información del título</h5>
 
                             <div class="form-divider"></div>
                             <div class="form-group row">
@@ -193,7 +193,7 @@
                                             }
                                             else
                                             {
-                                                <input type="checkbox" name="siono" value="boxyes"   data-toggle="tooltip" title="Si"
+                                                <input type="checkbox" name="siono" value="boxyes" data-toggle="tooltip" title="Si"
                                                        class="custom-control-input" id="customCheck6" data-parsley-multiple="groups" data-parsley-mincheck="2">
                                             }
                                             <label class="custom-control-label" for="customCheck6"> Si</label>
@@ -359,6 +359,7 @@
                             <!-- End View -->
 
                             <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
