--- a/WebApplication1/Areas/webmaster/Views/titulares/editarVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editarVehiculo.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    Page.Title = "Editar vehículo - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -32,7 +32,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Vehículos</li>
+                            <li class="breadcrumb-item active">Editar vehículo</li>
                         </ul>
                     </div>
                 </div>
@@ -151,6 +151,7 @@
                                 </div>
                             </div>
                             <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
