--- a/WebApplication1/Areas/webmaster/Views/titulares/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/ver.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ver";
-    Page.Title = "Ver Titular - Brokolee Software";
+    Page.Title = "Ver titular - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver Titular</li>
+                            <li class="breadcrumb-item active">Ver titular</li>
                         </ul>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Información del Titular</h5>
+                                <h5 class="d-inline-block">Información del titular</h5>
                             </div>
                             @*<div class="col-md-6 mb-1">
                 <a href="@Url.Action("editar", "titulares", new { area = "webmaster", id = Model.editUser.id })" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left">Editar</button></a>
@@ -70,8 +70,8 @@
                             <div class="col-sm-9">
                                 <input class="form-control" type="email" name="email" required value="@Model.editUser.email" readonly
                                        data-toggle="tooltip" 
-                                       placeholder="Correo electrónico del titular" id="example-email-input">
-                                <small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>
+                                       placeholder="Correo electrónico" id="example-email-input">
+                                <small class="form-text text-muted">Correo electrónico del titular</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
