--- a/WebApplication1/Areas/webmaster/Views/titulares/verTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/verTitulo.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Titular - Brokolee Software";
+    Page.Title = "Ver título - Brokolee Software";
 }
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
@@ -50,13 +50,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Ver Título de Propiedad</h4>
+                            <h4 class="page-title">Ver título de propiedad</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver Título de Propiedad</li>
+                            <li class="breadcrumb-item active">Ver título</li>
                         </ul>
                     </div>
                 </div>
