--- a/WebApplication1/Areas/webmaster/Views/webmaster/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Webmaster - Brokolee Software";
+    Page.Title = "Editar webmaster - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -85,7 +85,7 @@
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04" name="user_logo"
                                                    data-toggle="tooltip"  />
-                                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar Imagen a Editar</label>
+                                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar imagen a editar</label>
                                         </div>
                                         <div class="col-sm-3">
                                             <small class="form-text text-muted">Subir logo en formato jpg o png</small>
@@ -105,20 +105,20 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido Paterno</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="@Model.editAdmin.last_name1"
-                                           placeholder="Apellido Paterno" id="example-email-input" name="last_name1" required
+                                           placeholder="Apellido paterno" id="example-email-input" name="last_name1" required
                                            data-toggle="tooltip"  />
                                    @* <small class="form-text text-muted">Apellido Paterno del Administrador</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido Materno</label>
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido materno</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="@Model.editAdmin.mother_last_name1"
-                                           placeholder="Apellido Materno" id="example-email-input" name="mother_last_name1"
+                                           placeholder="Apellido materno" id="example-email-input" name="mother_last_name1"
                                            data-toggle="tooltip"  />
                                   @*  <small class="form-text text-muted">Apellido Materno del Administrador</small>*@
                                 </div>
