--- a/WebApplication1/Areas/webmaster/Views/webmaster/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/ver.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ver";
-    Page.Title = "Juan del Pueblo - Brokolee Software";
+    Page.Title = "Ver webmaster - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">El nombre del Webmaster</li>
+                            <li class="breadcrumb-item active">Ver webmaster</li>
                         </ul>
                     </div>
                 </div>
@@ -62,18 +62,18 @@
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="@Model.viewAdmin.first_name1"
                                         placeholder="Nombre" id="example-email-input" name="first_name1" readonly
-                                        data-toggle="tooltip" title="Nombre del Administrador" />
-                                <small class="form-text text-muted">Nombre del Administrador</small>
+                                        data-toggle="tooltip" title="Nombre del webmaster" />
+                                <small class="form-text text-muted">Nombre del webmaster</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
                         <div class="form-group row">
-                            <label for="example-email-input" class="col-sm-3 col-form-label">Apellido Paterno</label>
+                            <label for="example-email-input" class="col-sm-3 col-form-label">Apellido paterno</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="@Model.viewAdmin.last_name1"
-                                        placeholder="Apellido Paterno" id="example-email-input" name="last_name1" readonly
-                                        data-toggle="tooltip" title="Apellido Paterno del Administrador" />
-                                <small class="form-text text-muted">Apellido Paterno del Administrador</small>
+                                        placeholder="Apellido paterno" id="example-email-input" name="last_name1" readonly
+                                        data-toggle="tooltip" title="Apellido paterno del webmaster" />
+                                <small class="form-text text-muted">Apellido paterno del webmaster</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -81,9 +81,9 @@
                             <label for="example-email-input" class="col-sm-3 col-form-label">Apellido Materno</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="@Model.viewAdmin.mother_last_name1"
-                                        placeholder="Apellido Materno" id="example-email-input" name="mother_last_name1"
-                                        data-toggle="tooltip" title="Apellido Materno del Administrador" readonly/>
-                                <small class="form-text text-muted">Apellido Materno del Administrador</small>
+                                        placeholder="Apellido materno" id="example-email-input" name="mother_last_name1"
+                                        data-toggle="tooltip" title="Apellido materno del webmaster" readonly/>
+                                <small class="form-text text-muted">Apellido materno del webmaster</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -92,8 +92,8 @@
                             <div class="col-sm-9">
                                 <input class="form-control" type="email" value="@Model.viewAdmin.email"
                                         placeholder="Email" id="example-email-input" name="email"
-                                        data-toggle="tooltip" title="Email del Administrador" readonly/>
-                                <small class="form-text text-muted">Email del Administrador</small>
+                                        data-toggle="tooltip" title="Email del webmaster" readonly/>
+                                <small class="form-text text-muted">Email del webmaster</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
